# Muddle

./: .gitignore  README.md  gui.py  moodle.py  muddle  muddle.ini.example  muddle.py  muddle.ui  pyproject.toml  requirements.txt
doc/: muddle.ini.example
muddle/: __main__.py  gui.py  moodle.py  muddle.ui  paths.py
test/: moodle.py  paths.py
