[tool.poetry]
name = "muddle"
version = "0.1.0"
description = "A desktop client for Moodle"
authors = ["Nao Pross <np@0hm.ch>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^4.7.2"
requests = "^2.25.1"
pyqt6 = "^6.4.0"

[tool.poetry.dev-dependencies]
# pyinstaller = "^4.2"
pycodestyle = "^2.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
